dev/POCO/TEST/NEG/NSTRNG02.POC
/* Test an unterminated string */
#pragma poco echo "expect>strings cannot span lines without continuation"

main()
{
char *pt = "If we concatenate first and then..."
	"This is a verry weird

puts("This shouldn't compile");
}
